repeat of day 9

--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <body>
         <!--Start of nav-->
         <nav class="main-nav">
-            <a href="index.html">
-                <img src="images/matterhorn.jpg" class="logo" alt logo/>
-            </a>
             <ul class="nav-list">
                 <li class="nav-item"> 
                     <a href="index.html" class="nav-link">Home</a>
@@ -27,6 +24,10 @@
                 <li class="nav-item"> 
                     <a href="#hero" class="nav-link">Hero</a>
                 </li>
+                <li class="nav-item"> 
+                    <a href="google-earth.html" class="nav-link">Google Earth</a>
+                </li>
+                
             </ul>
         </nav>
         <!--End of Nav-->
@@ -34,7 +35,7 @@
         <!--Start of hero-->
         <section class="hero-section" id="hero">
             <h1 class="brand-name">
-                <span class="brand-background">Halo Travel</span>
+                <span class="brand-background">Angel Eye</span>
             </h1>
         </section>
         <!--End of hero-->
@@ -43,18 +44,24 @@
         <section class="info-column">
                 <div class="column">
                     <img class="column-matterhornday" src="images/matterhornday.png" class="logo" alt="logo"/>
-                        <p> This is the Matterhorn peak in the Swiss Alps, with a cool blue sky in the background.</p>
-                        <a href="index.html"><button class="column-button"> Matterhorn in the day</button></a>
+                    <p> This is the Matterhorn peak in the Swiss Alps, with a cool blue sky in the background.</p>
+                    <a href="index.html">
+                            <button class="column-button"> Matterhorn in the day</button>
+                    </a>
                 </div>
                 <div class="column">
                     <img class="column-mountfuji" src="images/mountfuji.jpg" class="logo" alt="logo"/>
-                        <p> The lovely Mount Fuji, as seen from a lovely dojo.</p>
-                        <a href="index.html"><button class="column-button"> Mount Fuji</button></a>
+                    <p> The lovely Mount Fuji, as seen from a lovely dojo.</p>
+                    <a href="index.html">
+                            <button class="column-button"> Mount Fuji</button>
+                    </a>
                 </div>
                 <div class="column">
                     <img class="column-matterhorngalaxy" src="images/matterhorngalaxy.jpg" class="logo" alt="logo"/>
-                        <p> This is the Matterhorn peak in the Swiss Alps, with a gorgeous view of the night sky.</p>
-                        <a href="index.html"><button class="column-button"> Matterhorn at night</button></a>
+                    <p> This is the Matterhorn peak in the Swiss Alps, with a gorgeous view of the night sky.</p>
+                    <a href="index.html">
+                            <button class="column-button"> Matterhorn at night</button>
+                    </a>
                 </div>
         </section>
         <!--End of column-->
