--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,6 @@
     <body>
         <!--Start of nav-->
         <nav class="main-nav">
-            <a href="index.html">
-                <img src="images/matterhorn.jpg" class="logo" alt logo/>
-            </a>
             <ul class="nav-list">
                 <li class="nav-item"> 
                     <a href="index.html" class="nav-link">Home</a>
@@ -69,7 +66,7 @@
             </div>
             
             <div class="social-media-container right">  
-            <i class="fa fa-twitter"></i>
+            <i class="fa fa-globe"></i>
             <i class="fa fa-github"></i>
             </div>        
         </footer>
