changed icon to plane

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
             
             <div class="social-media-container right">  
-            <i class="fa fa-twitter"></i>
+            <i class="fa fa-plane"></i>
             <i class="fa fa-github"></i>
             </div>        
         </footer>
